--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="/images/favicon.png">
     <link href="/styles/main.css" rel="stylesheet">
-    <title>My Blog</title>
+    <title>Colin Wren</title>
   </head>
   <body>
     <ul class="nav group">
