--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
     <div class="content">
       <div class="post group"><img src="https://i.cloudup.com/banQWCT9M8.jpg" class="colin">
         <h1 class="about-name">Colin Wren</h1>
-        <p class="intro">My name is Colin Wren and I'm a web developer located in the San Francisco bay area. If you'd like to get in touch, you can reach me through my <a href="mailto:colinwrenca@gmail.com">Email, </a><a href="https://github.com/colinwren">GitHub, </a>or <a href="https://twitter.com/colinwrenca">Twitter</a></p>
+        <p class="intro">My name is Colin Wren and I'm a web developer located in the San Francisco bay area. If you'd like to get in touch, you can reach me through my <a href="mailto:colinwrenca@gmail.com">Email</a>, <a href="https://github.com/colinwren">GitHub</a>, or <a href="https://twitter.com/colinwrenca">Twitter</a>.</p>
       </div>
     </div><a href="http://cabinjs.com"><img src="/images/cabin.png" class="cabin"></a>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.2/jquery.min.js" type="text/javascript"></script>
