--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
     <title>Colin Wren</title>
     <meta name="description" content="Personal website of Colin Wren">
     <meta name="viewport" content="width=device-width">
-    <link href='http://fonts.googleapis.com/css?family=Cardo' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
     <link rel="icon" type="image/png" href="/favicon.png">
     <link rel="stylesheet" href="styles/main.css">
   </head>
